# Parkingvision

./: .gitignore  Dockerfile  README.md  dev_run.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
src/parkingvision/: __main__.py  cli.py
src/parkingvision/app/: __init__.py  predictor.py  run_pipeline.py  simulator.py  visualization.py
src/parkingvision/app/api/: __init__.py  amsterdam.py  base.py  brussels.py  here.py  mock.py
src/parkingvision/data/processed/: brussels_parking_history.csv  testcity_parking_history.csv
src/parkingvision/data/raw/: sample_parking.csv
tests/: test_api.py  test_pipeline.py  test_predictor.py
